# aigiftcard

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
card/: 1_🎨_Home.py  home.py  main.py
card/pages/: create_card.py
