[tool.poetry]
name = "aigiftcard"
version = "0.0.1"
description = "Gift Card"
authors = ["Andrea Dal Pozollo <dalpozz@gmail.com>"]
readme = "README.md"
repository = "https://github.com/dalpozz/aigiftcard"


[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.11"
requests = "^2.31.0"
stability-sdk = "^0.8.4"
streamlit-image-comparison = "^0.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
